[gd_scene load_steps=13 format=3 uid="uid://dm5jogywt2n30"]

[ext_resource type="Script" path="res://components/register/Register.gd" id="1_n6wpa"]
[ext_resource type="Texture2D" uid="uid://mdqfxy13fgv3" path="res://sprites/ui/nine_path_9.png" id="2_3jjra"]
[ext_resource type="Texture2D" uid="uid://dpeutm1cewsum" path="res://sprites/ui/nine_path_8.png" id="3_arcuu"]
[ext_resource type="FontFile" uid="uid://8n7eoa5gi3en" path="res://fonts/pansyhand.ttf" id="4_3oc43"]
[ext_resource type="Theme" uid="uid://cmqaxsejj61g2" path="res://themes/Buttons.tres" id="5_0wa4y"]
[ext_resource type="PackedScene" uid="uid://c85uch07swpxi" path="res://components/Spinner.tscn" id="6_6np3t"]
[ext_resource type="Texture2D" uid="uid://b1w5a1t4rnkgv" path="res://sprites/logo.png" id="7_std3y"]
[ext_resource type="Texture2D" uid="uid://bxkn22dt6lihi" path="res://sprites/ArrowLeft.png" id="8_erxlp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r2wc3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4ylxr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0vnq1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2nrmy"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n6wpa")

[node name="Container" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -102.0
offset_right = 115.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3jjra")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Inputs" type="VBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -66.0
offset_right = 68.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameInput" type="Control" parent="Container/Inputs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="NinePatchRect" parent="Container/Inputs/NameInput"]
layout_mode = 2
offset_left = -68.0
offset_top = 14.0
offset_right = 68.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_arcuu")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="NameInput" type="LineEdit" parent="Container/Inputs/NameInput"]
layout_mode = 2
offset_left = -60.0
offset_top = 13.0
offset_right = 61.0
offset_bottom = 30.0
focus_next = NodePath("../../LastNameInput/LastNameInput")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0.533037, 0.533037, 0.533037, 1)
theme_override_colors/font_placeholder_color = Color(0.541176, 0.541176, 0.541176, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(1, 0.713726, 0.431373, 0.458824)
theme_override_fonts/font = ExtResource("4_3oc43")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_r2wc3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ylxr")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_0vnq1")
placeholder_text = "Nombre"
caret_blink = true

[node name="LastNameInput" type="Control" parent="Container/Inputs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="NinePatchRect" parent="Container/Inputs/LastNameInput"]
layout_mode = 2
offset_left = -68.0
offset_top = 28.0
offset_right = 68.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_arcuu")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="LastNameInput" type="LineEdit" parent="Container/Inputs/LastNameInput"]
layout_mode = 2
offset_left = -60.0
offset_top = 27.0
offset_right = 61.0
offset_bottom = 44.0
focus_next = NodePath("../../EmailInput/EmailInput")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0.533037, 0.533037, 0.533037, 1)
theme_override_colors/font_placeholder_color = Color(0.541176, 0.541176, 0.541176, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(1, 0.713726, 0.431373, 0.458824)
theme_override_fonts/font = ExtResource("4_3oc43")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_r2wc3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ylxr")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_0vnq1")
placeholder_text = "Apellido"
caret_blink = true

[node name="EmailInput" type="Control" parent="Container/Inputs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="NinePatchRect" parent="Container/Inputs/EmailInput"]
layout_mode = 2
offset_left = -67.0
offset_top = 42.0
offset_right = 69.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_arcuu")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="EmailInput" type="LineEdit" parent="Container/Inputs/EmailInput"]
layout_mode = 2
offset_left = -59.0
offset_top = 41.0
offset_right = 62.0
offset_bottom = 58.0
focus_next = NodePath("../../ClassRoomInput/ClassRoomInput")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0.533037, 0.533037, 0.533037, 1)
theme_override_colors/font_placeholder_color = Color(0.541176, 0.541176, 0.541176, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(1, 0.713726, 0.431373, 0.458824)
theme_override_fonts/font = ExtResource("4_3oc43")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_r2wc3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ylxr")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_0vnq1")
placeholder_text = "Email"
caret_blink = true

[node name="ClassRoomInput" type="Control" parent="Container/Inputs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="NinePatchRect" parent="Container/Inputs/ClassRoomInput"]
layout_mode = 2
offset_left = -67.0
offset_top = 56.0
offset_right = 69.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_arcuu")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="ClassRoomInput" type="LineEdit" parent="Container/Inputs/ClassRoomInput"]
layout_mode = 2
offset_left = -59.0
offset_top = 55.0
offset_right = 62.0
offset_bottom = 72.0
focus_next = NodePath("../../UserNameInput/UserNameInput")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0.533037, 0.533037, 0.533037, 1)
theme_override_colors/font_placeholder_color = Color(0.541176, 0.541176, 0.541176, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(1, 0.713726, 0.431373, 0.458824)
theme_override_fonts/font = ExtResource("4_3oc43")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_r2wc3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ylxr")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_0vnq1")
placeholder_text = "Aula"
caret_blink = true

[node name="UserNameInput" type="Control" parent="Container/Inputs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="NinePatchRect" parent="Container/Inputs/UserNameInput"]
layout_mode = 2
offset_left = -67.0
offset_top = 71.0
offset_right = 69.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_arcuu")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="UserNameInput" type="LineEdit" parent="Container/Inputs/UserNameInput"]
layout_mode = 2
offset_left = -59.0
offset_top = 70.0
offset_right = 62.0
offset_bottom = 87.0
focus_next = NodePath("../../PasswordInput/PasswordInput")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0.533037, 0.533037, 0.533037, 1)
theme_override_colors/font_placeholder_color = Color(0.541176, 0.541176, 0.541176, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(1, 0.713726, 0.431373, 0.458824)
theme_override_fonts/font = ExtResource("4_3oc43")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_r2wc3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ylxr")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_0vnq1")
placeholder_text = "Nombre de usuario"
caret_blink = true

[node name="PasswordInput" type="Control" parent="Container/Inputs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="NinePatchRect" parent="Container/Inputs/PasswordInput"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = 86.0
offset_right = 69.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_arcuu")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="PasswordInput" type="LineEdit" parent="Container/Inputs/PasswordInput"]
layout_mode = 0
offset_left = -59.0
offset_top = 82.0
offset_right = 63.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0.533333, 0.533333, 0.533333, 1)
theme_override_colors/font_placeholder_color = Color(0.541176, 0.541176, 0.541176, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 0)
theme_override_colors/selection_color = Color(1, 0.713726, 0.431373, 0.458824)
theme_override_fonts/font = ExtResource("4_3oc43")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_r2wc3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ylxr")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_2nrmy")
placeholder_text = "Contraseña"
secret = true
secret_character = "∙"
caret_blink = true

[node name="LoginButton" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = -62.0
offset_top = 25.0
offset_right = 74.0
offset_bottom = 25.0

[node name="Button" type="Button" parent="LoginButton"]
layout_mode = 0
offset_left = -3.0
offset_top = 42.0
offset_right = 133.0
offset_bottom = 58.0
theme = ExtResource("5_0wa4y")

[node name="Label" type="Label" parent="LoginButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = 34.0
offset_right = 49.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.156863, 0.156863, 0.156863, 1)
theme_override_fonts/font = ExtResource("4_3oc43")
theme_override_font_sizes/font_size = 18
text = "REGISTRARSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spinner" parent="." instance=ExtResource("6_6np3t")]
position = Vector2(-5, 92)
scale = Vector2(0.5, 0.5)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -116.0
offset_right = 85.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_std3y")
expand_mode = 1
stretch_mode = 4

[node name="Error" type="Label" parent="."]
layout_mode = 0
offset_left = -45.0
offset_top = 84.0
offset_right = 45.0
offset_bottom = 98.0
theme_override_colors/font_color = Color(0.941176, 0.403922, 0.2, 1)
theme_override_fonts/font = ExtResource("4_3oc43")
theme_override_font_sizes/font_size = 12
text = "Email o contraseña inválidos."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -105.0
offset_top = -92.0
offset_right = -90.0
offset_bottom = -76.0
texture_normal = ExtResource("8_erxlp")

[connection signal="pressed" from="LoginButton/Button" to="." method="_on_button_pressed"]
